--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "reset-css": "^5.0.1",
     "sass": "^1.54.0",
     "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.2"
   }
 }
